--- a/HomePage.html
+++ b/HomePage.html
@@ -1,6 +1,6 @@
 <html>
   <head></head>
   <body>
-    <h1>This is P55 group</h1>
+    <h1 style="color:yellow">This is P55 group</h1>
   </body>
 </html>
